--- a/templates/index.html
+++ b/templates/index.html
@@ -271,15 +271,15 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>Serge Kamgang</h1>
+            <h1>Carel Takoumene</h1>
             <p>DevOps Engineer</p>
-            <p>serge.kamgang@utrains.org</p>
-            <p>Total Experience: 9+ Years</p>
+            <p>takoumenecarel@icloud.com</p>
+            <p>Total Experience: 4+ Years</p>
         </header>
 
         <section class="section summary">
             <h2>Professional Summary</h2>
-            <p>Experienced DevOps Engineer with over 8 years in automating, optimizing, and managing cloud infrastructure. Proficient in Docker, Kubernetes, AWS, Terraform, and bash scripting, with a proven track record of implementing CI/CD pipelines and container orchestration. Skilled in Linux server administration and infrastructure as code, delivering scalable and secure solutions.</p>
+            <p>Experienced DevOps Engineer with over 4 years in automating, optimizing, and managing cloud infrastructure. Proficient in Docker, Kubernetes, AWS, Terraform, and bash scripting, with a proven track record of implementing CI/CD pipelines and container orchestration. Skilled in Linux server administration and infrastructure as code, delivering scalable and secure solutions.</p>
         </section>
 
         <section class="section">
@@ -308,7 +308,7 @@
                 <span class="skill">Linux</span>
                 <span class="skill">Terraform</span>
                 <span class="skill">Bash</span>
-                <span class="skill">Jenkins</span>
+                <span class="skill">GitHub Actions</span>
                 <span class="skill">Git</span>
                 <span class="skill">Python</span>
                 <span class="skill">Ansible</span>
